--- a/src/main/resources/templates/dish/fullDish.html
+++ b/src/main/resources/templates/dish/fullDish.html
@@ -19,7 +19,7 @@
             <div class="col-md-6">
                 <div class="easyzoom easyzoom--overlay is-ready">
                     <a th:href="@{${dish.image}}" tabindex="0">
-                        <img th:src="${dish.image}" alt="" width="650" height="450">
+                        <img th:src="${dish.image}" alt="" style="object-fit: cover; width: 100%;">
                     </a>
                 </div>
             </div>
