--- a/src/main/resources/templates/category/category.html
+++ b/src/main/resources/templates/category/category.html
@@ -16,7 +16,7 @@
     <div class="col-sm-2" th:each="dishCategory : ${dishCategories}">
         <a class="card mt-5" style="text-decoration: none; color: black"
            th:href="@{/api/dish/get-all/{name}(name=${dishCategory.name.toLowerCase()})}">
-            <img th:src="${dishCategory.image}" class="card-img-top" alt="" width="150" height="150">
+            <img th:src="${dishCategory.image}" class="card-img-top" alt="" style="height: auto; width: auto;">
             <div class="card-body">
                 <h5 class="card-title text-center" th:text="${dishCategory.name}"></h5>
             </div>
